; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/tulip/extr_de2104x.c_de_start_rxtx.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/tulip/extr_de2104x.c_de_start_rxtx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.de_private = type { i32 }

@MacMode = common dso_local global i32 0, align 4
@RxTx = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.de_private*)* @de_start_rxtx to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @de_start_rxtx(%struct.de_private* %0) #0 {
  %2 = alloca %struct.de_private*, align 8
  %3 = alloca i32, align 4
  store %struct.de_private* %0, %struct.de_private** %2, align 8
  %4 = load i32, i32* @MacMode, align 4
  %5 = call i32 @dr32(i32 %4)
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = load i32, i32* @RxTx, align 4
  %8 = and i32 %6, %7
  %9 = load i32, i32* @RxTx, align 4
  %10 = icmp ne i32 %8, %9
  br i1 %10, label %11, label %19

11:                                               ; preds = %1
  %12 = load i32, i32* @MacMode, align 4
  %13 = load i32, i32* %3, align 4
  %14 = load i32, i32* @RxTx, align 4
  %15 = or i32 %13, %14
  %16 = call i32 @dw32(i32 %12, i32 %15)
  %17 = load i32, i32* @MacMode, align 4
  %18 = call i32 @dr32(i32 %17)
  br label %19

19:                                               ; preds = %11, %1
  ret void
}

declare dso_local i32 @dr32(i32) #1

declare dso_local i32 @dw32(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
